--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -60,6 +60,7 @@
 	"available!": "verfügbar!",
 	"Back": "Zurück",
 	"Bad Response": "Schlechte Antwort",
+	"Banners": "",
 	"before": "bereits geteilt",
 	"Being lazy": "Faul sein",
 	"Builder Mode": "Builder Modus",
@@ -98,6 +99,7 @@
 	"Confirm Password": "Passwort bestätigen",
 	"Connections": "Verbindungen",
 	"Content": "Inhalt",
+	"Content of the banner": "",
 	"Context Length": "Context Length",
 	"Continue Response": "Antwort fortsetzen",
 	"Conversation Mode": "Konversationsmodus",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "Einen Prompt entdecken",
 	"Discover, download, and explore custom prompts": "Benutzerdefinierte Prompts entdecken, herunterladen und erkunden",
 	"Discover, download, and explore model presets": "Modellvorgaben entdecken, herunterladen und erkunden",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Den Benutzernamen anstelle von 'du' im Chat anzeigen",
 	"Document": "Dokument",
 	"Document Settings": "Dokumenteinstellungen",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "Gib deinen vollständigen Namen ein",
 	"Enter Your Password": "Gib dein Passwort ein",
 	"Enter Your Role": "Gebe deine Rolle ein",
+	"Error": "",
 	"Experimental": "Experimentell",
 	"Export All Chats (All Users)": "Alle Chats exportieren (alle Benutzer)",
 	"Export Chats": "Chats exportieren",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "Modelfiles importieren",
 	"Import Prompts": "Prompts importieren",
 	"Include `--api` flag when running stable-diffusion-webui": "Füge das `--api`-Flag hinzu, wenn du stable-diffusion-webui nutzt",
+	"Info": "",
 	"Input commands": "Eingabebefehle",
 	"Interface": "Benutzeroberfläche",
 	"Invalid Tag": "Ungültiger Tag",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "Probleme beim Zugriff auf Ollama?",
 	"TTS Settings": "TTS-Einstellungen",
 	"Type Hugging Face Resolve (Download) URL": "Gib die Hugging Face Resolve (Download) URL ein",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Ups! Es gab ein Problem bei der Verbindung mit {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Unbekannter Dateityp '{{file_type}}', wird jedoch akzeptiert und als einfacher Text behandelt.",
 	"Update and Copy Link": "Erneuern und kopieren",
@@ -478,6 +484,7 @@
 	"variable": "Variable",
 	"variable to have them replaced with clipboard content.": "Variable, um den Inhalt der Zwischenablage beim Nutzen des Prompts zu ersetzen.",
 	"Version": "Version",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Warnung: Wenn du dein Einbettungsmodell aktualisierst oder änderst, musst du alle Dokumente erneut importieren.",
 	"Web": "Web",
 	"Web Loader Settings": "Web Loader Einstellungen",
