--- a/src/lib/i18n/locales/dg-DG/translation.json
+++ b/src/lib/i18n/locales/dg-DG/translation.json
@@ -60,6 +60,7 @@
 	"available!": "available! So excite!",
 	"Back": "Back",
 	"Bad Response": "",
+	"Banners": "",
 	"before": "",
 	"Being lazy": "",
 	"Builder Mode": "Builder Mode",
@@ -98,6 +99,7 @@
 	"Confirm Password": "Confirm Password",
 	"Connections": "Connections",
 	"Content": "Content",
+	"Content of the banner": "",
 	"Context Length": "Context Length",
 	"Continue Response": "",
 	"Conversation Mode": "Conversation Mode",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "Discover a prompt",
 	"Discover, download, and explore custom prompts": "Discover, download, and explore custom prompts",
 	"Discover, download, and explore model presets": "Discover, download, and explore model presets",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Display username instead of You in Chat",
 	"Document": "Document",
 	"Document Settings": "Document Settings",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "Enter Your Full Wow",
 	"Enter Your Password": "Enter Your Barkword",
 	"Enter Your Role": "",
+	"Error": "",
 	"Experimental": "Much Experiment",
 	"Export All Chats (All Users)": "Export All Chats (All Doggos)",
 	"Export Chats": "Export Barks",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "Import Modelfiles",
 	"Import Prompts": "Import Promptos",
 	"Include `--api` flag when running stable-diffusion-webui": "Include `--api` flag when running stable-diffusion-webui",
+	"Info": "",
 	"Input commands": "Input commands",
 	"Interface": "Interface",
 	"Invalid Tag": "",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "Trouble accessing Ollama? Much trouble?",
 	"TTS Settings": "TTS Settings much settings",
 	"Type Hugging Face Resolve (Download) URL": "Type Hugging Face Resolve (Download) URL much download",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Uh-oh! There was an issue connecting to {{provider}}. Much uh-oh!",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Unknown File Type '{{file_type}}', but accepting and treating as plain text very unknown",
 	"Update and Copy Link": "",
@@ -478,6 +484,7 @@
 	"variable": "variable very variable",
 	"variable to have them replaced with clipboard content.": "variable to have them replaced with clipboard content. Very replace.",
 	"Version": "Version much version",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "",
 	"Web": "Web very web",
 	"Web Loader Settings": "",
