--- a/src/lib/i18n/locales/en-GB/translation.json
+++ b/src/lib/i18n/locales/en-GB/translation.json
@@ -60,6 +60,7 @@
 	"available!": "",
 	"Back": "",
 	"Bad Response": "",
+	"Banners": "",
 	"before": "",
 	"Being lazy": "",
 	"Builder Mode": "",
@@ -98,6 +99,7 @@
 	"Confirm Password": "",
 	"Connections": "",
 	"Content": "",
+	"Content of the banner": "",
 	"Context Length": "",
 	"Continue Response": "",
 	"Conversation Mode": "",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "",
 	"Discover, download, and explore custom prompts": "",
 	"Discover, download, and explore model presets": "",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "",
 	"Document": "",
 	"Document Settings": "",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "",
 	"Enter Your Password": "",
 	"Enter Your Role": "",
+	"Error": "",
 	"Experimental": "",
 	"Export All Chats (All Users)": "",
 	"Export Chats": "",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "",
 	"Import Prompts": "",
 	"Include `--api` flag when running stable-diffusion-webui": "",
+	"Info": "",
 	"Input commands": "",
 	"Interface": "",
 	"Invalid Tag": "",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "",
 	"TTS Settings": "",
 	"Type Hugging Face Resolve (Download) URL": "",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "",
 	"Update and Copy Link": "",
@@ -478,6 +484,7 @@
 	"variable": "",
 	"variable to have them replaced with clipboard content.": "",
 	"Version": "",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "",
 	"Web": "",
 	"Web Loader Settings": "",
