--- a/src/lib/i18n/locales/fa-IR/translation.json
+++ b/src/lib/i18n/locales/fa-IR/translation.json
@@ -60,6 +60,7 @@
 	"available!": "در دسترس!",
 	"Back": "بازگشت",
 	"Bad Response": "پاسخ خوب نیست",
+	"Banners": "",
 	"before": "قبل",
 	"Being lazy": "حالت سازنده",
 	"Builder Mode": "حالت سازنده",
@@ -98,6 +99,7 @@
 	"Confirm Password": "تایید رمز عبور",
 	"Connections": "ارتباطات",
 	"Content": "محتوا",
+	"Content of the banner": "",
 	"Context Length": "طول زمینه",
 	"Continue Response": "ادامه پاسخ",
 	"Conversation Mode": "حالت مکالمه",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "یک اعلان را کشف کنید",
 	"Discover, download, and explore custom prompts": "پرامپت\u200cهای سفارشی را کشف، دانلود و کاوش کنید",
 	"Discover, download, and explore model presets": "پیش تنظیمات مدل را کشف، دانلود و کاوش کنید",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "نمایش نام کاربری به جای «شما» در چت",
 	"Document": "سند",
 	"Document Settings": "تنظیمات سند",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "نام کامل خود را وارد کنید",
 	"Enter Your Password": "رمز عبور خود را وارد کنید",
 	"Enter Your Role": "نقش خود را وارد کنید",
+	"Error": "",
 	"Experimental": "آزمایشی",
 	"Export All Chats (All Users)": "اکسپورت از همه گپ\u200cها(همه کاربران)",
 	"Export Chats": "اکسپورت از گپ\u200cها",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "ایمپورت فایل\u200cهای مدل",
 	"Import Prompts": "ایمپورت پرامپت\u200cها",
 	"Include `--api` flag when running stable-diffusion-webui": "فلگ `--api` را هنکام اجرای stable-diffusion-webui استفاده کنید.",
+	"Info": "",
 	"Input commands": "ورودی دستورات",
 	"Interface": "رابط",
 	"Invalid Tag": "تگ نامعتبر",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "در دسترسی به اولاما مشکل دارید؟",
 	"TTS Settings": "تنظیمات TTS",
 	"Type Hugging Face Resolve (Download) URL": "مقدار URL دانلود (Resolve) Hugging Face را وارد کنید",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "اوه اوه! مشکلی در اتصال به {{provider}} وجود داشت.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "نوع فایل '{{file_type}}' ناشناخته است، به عنوان یک فایل متنی ساده با آن برخورد می شود.",
 	"Update and Copy Link": "به روزرسانی و کپی لینک",
@@ -478,6 +484,7 @@
 	"variable": "متغیر",
 	"variable to have them replaced with clipboard content.": "متغیر برای جایگزینی آنها با محتوای کلیپ بورد.",
 	"Version": "نسخه",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "هشدار: اگر شما به روز کنید یا تغییر دهید مدل شما، باید تمام سند ها را مجددا وارد کنید.",
 	"Web": "وب",
 	"Web Loader Settings": "تنظیمات لودر وب",
