--- a/src/lib/i18n/locales/fi-FI/translation.json
+++ b/src/lib/i18n/locales/fi-FI/translation.json
@@ -60,6 +60,7 @@
 	"available!": "saatavilla!",
 	"Back": "Takaisin",
 	"Bad Response": "Epäkelpo vastaus",
+	"Banners": "",
 	"before": "ennen",
 	"Being lazy": "Oli laiska",
 	"Builder Mode": "Rakentajan tila",
@@ -98,6 +99,7 @@
 	"Confirm Password": "Vahvista salasana",
 	"Connections": "Yhteydet",
 	"Content": "Sisältö",
+	"Content of the banner": "",
 	"Context Length": "Kontekstin pituus",
 	"Continue Response": "Jatka vastausta",
 	"Conversation Mode": "Keskustelutila",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "Löydä kehote",
 	"Discover, download, and explore custom prompts": "Löydä ja lataa mukautettuja kehotteita",
 	"Discover, download, and explore model presets": "Löydä ja lataa mallien esiasetuksia",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Näytä käyttäjänimi keskustelussa",
 	"Document": "Asiakirja",
 	"Document Settings": "Asiakirja-asetukset",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "Syötä koko nimesi",
 	"Enter Your Password": "Syötä salasanasi",
 	"Enter Your Role": "Syötä roolisi",
+	"Error": "",
 	"Experimental": "Kokeellinen",
 	"Export All Chats (All Users)": "Vie kaikki keskustelut (kaikki käyttäjät)",
 	"Export Chats": "Vie keskustelut",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "Tuo mallitiedostoja",
 	"Import Prompts": "Tuo kehotteita",
 	"Include `--api` flag when running stable-diffusion-webui": "Sisällytä `--api`-parametri suorittaessasi stable-diffusion-webui",
+	"Info": "",
 	"Input commands": "Syötä komennot",
 	"Interface": "Käyttöliittymä",
 	"Invalid Tag": "Virheellinen tagi",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "Ongelmia Ollama-yhteydessä?",
 	"TTS Settings": "Puheentuottamisasetukset",
 	"Type Hugging Face Resolve (Download) URL": "Kirjoita Hugging Face -resolve-osoite",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Voi ei! Yhteysongelma {{provider}}:n kanssa.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Tuntematon tiedostotyyppi '{{file_type}}', mutta hyväksytään ja käsitellään pelkkänä tekstinä",
 	"Update and Copy Link": "Päivitä ja kopioi linkki",
@@ -478,6 +484,7 @@
 	"variable": "muuttuja",
 	"variable to have them replaced with clipboard content.": "muuttuja korvataan leikepöydän sisällöllä.",
 	"Version": "Versio",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Varoitus: Jos päivität tai vaihdat upotusmallia, sinun on tuotava kaikki asiakirjat uudelleen.",
 	"Web": "Web",
 	"Web Loader Settings": "Web Loader asetukset",
