--- a/src/lib/i18n/locales/hr-HR/translation.json
+++ b/src/lib/i18n/locales/hr-HR/translation.json
@@ -60,6 +60,7 @@
 	"available!": "dostupno!",
 	"Back": "Natrag",
 	"Bad Response": "Loš odgovor",
+	"Banners": "",
 	"before": "prije",
 	"Being lazy": "Biti lijen",
 	"Builder Mode": "Način graditelja",
@@ -98,6 +99,7 @@
 	"Confirm Password": "Potvrdite lozinku",
 	"Connections": "Povezivanja",
 	"Content": "Sadržaj",
+	"Content of the banner": "",
 	"Context Length": "Dužina konteksta",
 	"Continue Response": "Nastavi odgovor",
 	"Conversation Mode": "Način razgovora",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "Otkrijte prompt",
 	"Discover, download, and explore custom prompts": "Otkrijte, preuzmite i istražite prilagođene prompte",
 	"Discover, download, and explore model presets": "Otkrijte, preuzmite i istražite unaprijed postavljene modele",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Prikaži korisničko ime umjesto Vas u razgovoru",
 	"Document": "Dokument",
 	"Document Settings": "Postavke dokumenta",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "Unesite svoje puno ime",
 	"Enter Your Password": "Unesite svoju lozinku",
 	"Enter Your Role": "Unesite svoju ulogu",
+	"Error": "",
 	"Experimental": "Eksperimentalno",
 	"Export All Chats (All Users)": "Izvoz svih razgovora (svi korisnici)",
 	"Export Chats": "Izvoz razgovora",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "Uvoz datoteka modela",
 	"Import Prompts": "Uvoz prompta",
 	"Include `--api` flag when running stable-diffusion-webui": "Uključite zastavicu `--api` prilikom pokretanja stable-diffusion-webui",
+	"Info": "",
 	"Input commands": "Unos naredbi",
 	"Interface": "Sučelje",
 	"Invalid Tag": "Nevažeća oznaka",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "Problemi s pristupom Ollama?",
 	"TTS Settings": "TTS postavke",
 	"Type Hugging Face Resolve (Download) URL": "Upišite Hugging Face Resolve (Download) URL",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Uh-oh! Pojavio se problem s povezivanjem na {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Nepoznata vrsta datoteke '{{file_type}}', ali prihvaćena i obrađuje se kao običan tekst",
 	"Update and Copy Link": "Ažuriraj i kopiraj vezu",
@@ -478,6 +484,7 @@
 	"variable": "varijabla",
 	"variable to have them replaced with clipboard content.": "varijabla za zamjenu sadržajem međuspremnika.",
 	"Version": "Verzija",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Upozorenje: Ako ažurirate ili promijenite svoj model za umetanje, morat ćete ponovno uvesti sve dokumente.",
 	"Web": "Web",
 	"Web Loader Settings": "Postavke web učitavanja",
