--- a/src/lib/i18n/locales/it-IT/translation.json
+++ b/src/lib/i18n/locales/it-IT/translation.json
@@ -60,6 +60,7 @@
 	"available!": "disponibile!",
 	"Back": "Indietro",
 	"Bad Response": "Risposta non valida",
+	"Banners": "",
 	"before": "prima",
 	"Being lazy": "Essere pigri",
 	"Builder Mode": "Modalità costruttore",
@@ -98,6 +99,7 @@
 	"Confirm Password": "Conferma password",
 	"Connections": "Connessioni",
 	"Content": "Contenuto",
+	"Content of the banner": "",
 	"Context Length": "Lunghezza contesto",
 	"Continue Response": "Continua risposta",
 	"Conversation Mode": "Modalità conversazione",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "Scopri un prompt",
 	"Discover, download, and explore custom prompts": "Scopri, scarica ed esplora prompt personalizzati",
 	"Discover, download, and explore model presets": "Scopri, scarica ed esplora i preset del modello",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Visualizza il nome utente invece di Tu nella chat",
 	"Document": "Documento",
 	"Document Settings": "Impostazioni documento",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "Inserisci il tuo nome completo",
 	"Enter Your Password": "Inserisci la tua password",
 	"Enter Your Role": "Inserisci il tuo ruolo",
+	"Error": "",
 	"Experimental": "Sperimentale",
 	"Export All Chats (All Users)": "Esporta tutte le chat (tutti gli utenti)",
 	"Export Chats": "Esporta chat",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "Importa file modello",
 	"Import Prompts": "Importa prompt",
 	"Include `--api` flag when running stable-diffusion-webui": "Includi il flag `--api` quando esegui stable-diffusion-webui",
+	"Info": "",
 	"Input commands": "Comandi di input",
 	"Interface": "Interfaccia",
 	"Invalid Tag": "Tag non valido",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "Problemi di accesso a Ollama?",
 	"TTS Settings": "Impostazioni TTS",
 	"Type Hugging Face Resolve (Download) URL": "Digita l'URL di Hugging Face Resolve (Download)",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Uh-oh! Si è verificato un problema durante la connessione a {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Tipo di file sconosciuto '{{file_type}}', ma accettato e trattato come testo normale",
 	"Update and Copy Link": "Aggiorna e copia link",
@@ -478,6 +484,7 @@
 	"variable": "variabile",
 	"variable to have them replaced with clipboard content.": "variabile per farli sostituire con il contenuto degli appunti.",
 	"Version": "Versione",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Attenzione: se aggiorni o cambi il tuo modello di embedding, dovrai reimportare tutti i documenti.",
 	"Web": "Web",
 	"Web Loader Settings": "Impostazioni del caricatore Web",
