--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -60,6 +60,7 @@
 	"available!": "利用可能！",
 	"Back": "戻る",
 	"Bad Response": "応答が悪い",
+	"Banners": "",
 	"before": "より前",
 	"Being lazy": "怠惰な",
 	"Builder Mode": "ビルダーモード",
@@ -98,6 +99,7 @@
 	"Confirm Password": "パスワードを確認",
 	"Connections": "接続",
 	"Content": "コンテンツ",
+	"Content of the banner": "",
 	"Context Length": "コンテキストの長さ",
 	"Continue Response": "続きの応答",
 	"Conversation Mode": "会話モード",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "プロンプトを見つける",
 	"Discover, download, and explore custom prompts": "カスタムプロンプトを見つけて、ダウンロードして、探索",
 	"Discover, download, and explore model presets": "モデルプリセットを見つけて、ダウンロードして、探索",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "チャットで「あなた」の代わりにユーザー名を表示",
 	"Document": "ドキュメント",
 	"Document Settings": "ドキュメント設定",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "フルネームを入力してください",
 	"Enter Your Password": "パスワードを入力してください",
 	"Enter Your Role": "ロールを入力してください",
+	"Error": "",
 	"Experimental": "実験的",
 	"Export All Chats (All Users)": "すべてのチャットをエクスポート (すべてのユーザー)",
 	"Export Chats": "チャットをエクスポート",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "モデルファイルをインポート",
 	"Import Prompts": "プロンプトをインポート",
 	"Include `--api` flag when running stable-diffusion-webui": "stable-diffusion-webuiを実行する際に`--api`フラグを含める",
+	"Info": "",
 	"Input commands": "入力コマンド",
 	"Interface": "インターフェース",
 	"Invalid Tag": "無効なタグ",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "Ollama へのアクセスに問題がありますか？",
 	"TTS Settings": "TTS 設定",
 	"Type Hugging Face Resolve (Download) URL": "Hugging Face Resolve (ダウンロード) URL を入力してください",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "おっと！ {{provider}} への接続に問題が発生しました。",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "不明なファイルタイプ '{{file_type}}' ですが、プレーンテキストとして受け入れて処理します",
 	"Update and Copy Link": "リンクの更新とコピー",
@@ -478,6 +484,7 @@
 	"variable": "変数",
 	"variable to have them replaced with clipboard content.": "クリップボードの内容に置き換える変数。",
 	"Version": "バージョン",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "警告: 埋め込みモデルを更新または変更した場合は、すべてのドキュメントを再インポートする必要があります。",
 	"Web": "ウェブ",
 	"Web Loader Settings": "Web 読み込み設定",
