--- a/src/lib/i18n/locales/pl-PL/translation.json
+++ b/src/lib/i18n/locales/pl-PL/translation.json
@@ -60,6 +60,7 @@
 	"available!": "dostępny!",
 	"Back": "Wstecz",
 	"Bad Response": "Zła odpowiedź",
+	"Banners": "",
 	"before": "przed",
 	"Being lazy": "Jest leniwy",
 	"Builder Mode": "Tryb budowniczego",
@@ -98,6 +99,7 @@
 	"Confirm Password": "Potwierdź hasło",
 	"Connections": "Połączenia",
 	"Content": "Zawartość",
+	"Content of the banner": "",
 	"Context Length": "Długość kontekstu",
 	"Continue Response": "Kontynuuj odpowiedź",
 	"Conversation Mode": "Tryb rozmowy",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "Odkryj prompt",
 	"Discover, download, and explore custom prompts": "Odkryj, pobierz i eksploruj niestandardowe prompty",
 	"Discover, download, and explore model presets": "Odkryj, pobierz i eksploruj ustawienia modeli",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Wyświetl nazwę użytkownika zamiast Ty w czacie",
 	"Document": "Dokument",
 	"Document Settings": "Ustawienia dokumentu",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "Wprowadź swoje imię i nazwisko",
 	"Enter Your Password": "Wprowadź swoje hasło",
 	"Enter Your Role": "Wprowadź swoją rolę",
+	"Error": "",
 	"Experimental": "Eksperymentalne",
 	"Export All Chats (All Users)": "Eksportuj wszystkie czaty (wszyscy użytkownicy)",
 	"Export Chats": "Eksportuj czaty",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "Importuj pliki modeli",
 	"Import Prompts": "Importuj prompty",
 	"Include `--api` flag when running stable-diffusion-webui": "Dołącz flagę `--api` podczas uruchamiania stable-diffusion-webui",
+	"Info": "",
 	"Input commands": "Wprowadź komendy",
 	"Interface": "Interfejs",
 	"Invalid Tag": "Nieprawidłowy tag",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "Problemy z dostępem do Ollama?",
 	"TTS Settings": "Ustawienia TTS",
 	"Type Hugging Face Resolve (Download) URL": "Wprowadź adres URL do pobrania z Hugging Face",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "O nie! Wystąpił problem z połączeniem z {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Nieznany typ pliku '{{file_type}}', ale akceptowany i traktowany jako zwykły tekst",
 	"Update and Copy Link": "Uaktualnij i skopiuj link",
@@ -478,6 +484,7 @@
 	"variable": "zmienna",
 	"variable to have them replaced with clipboard content.": "zmienna która zostanie zastąpiona zawartością schowka.",
 	"Version": "Wersja",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Uwaga: Jeśli uaktualnisz lub zmienisz model osadzania, będziesz musiał ponownie zaimportować wszystkie dokumenty.",
 	"Web": "Sieć",
 	"Web Loader Settings": "Ustawienia pobierania z sieci",
