--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -60,6 +60,7 @@
 	"available!": "доступный!",
 	"Back": "Назад",
 	"Bad Response": "Недопустимый ответ",
+	"Banners": "",
 	"before": "до",
 	"Being lazy": "ленивый",
 	"Builder Mode": "Режим конструктор",
@@ -98,6 +99,7 @@
 	"Confirm Password": "Подтвердите пароль",
 	"Connections": "Соединение",
 	"Content": "Содержание",
+	"Content of the banner": "",
 	"Context Length": "Длина контексту",
 	"Continue Response": "Продолжить ответ",
 	"Conversation Mode": "Режим разговора",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "Найти промт",
 	"Discover, download, and explore custom prompts": "Находите, загружайте и исследуйте настраиваемые промты",
 	"Discover, download, and explore model presets": "Находите, загружайте и исследуйте предустановки модели",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Отображать имя пользователя вместо 'Вы' в чате",
 	"Document": "Документ",
 	"Document Settings": "Настройки документа",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "Введите ваше полное имя",
 	"Enter Your Password": "Введите ваш пароль",
 	"Enter Your Role": "Введите вашу роль",
+	"Error": "",
 	"Experimental": "Экспериментальное",
 	"Export All Chats (All Users)": "Экспортировать все чаты (все пользователи)",
 	"Export Chats": "Экспортировать чаты",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "Импорт файлов модели",
 	"Import Prompts": "Импорт подсказок",
 	"Include `--api` flag when running stable-diffusion-webui": "Добавьте флаг `--api` при запуске stable-diffusion-webui",
+	"Info": "",
 	"Input commands": "Введите команды",
 	"Interface": "Интерфейс",
 	"Invalid Tag": "Недопустимый тег",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "Проблемы с доступом к Ollama?",
 	"TTS Settings": "Настройки TTS",
 	"Type Hugging Face Resolve (Download) URL": "Введите URL-адрес Hugging Face Resolve (загрузки)",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Упс! Возникла проблема подключения к {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Неизвестный тип файла '{{file_type}}', но принимается и обрабатывается как обычный текст",
 	"Update and Copy Link": "Обновить и скопировать ссылку",
@@ -478,6 +484,7 @@
 	"variable": "переменная",
 	"variable to have them replaced with clipboard content.": "переменная, чтобы их заменить содержимым буфера обмена.",
 	"Version": "Версия",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Предупреждение: Если вы обновите или измените модель эмбеддинга, вам нужно будет повторно импортировать все документы.",
 	"Web": "Веб",
 	"Web Loader Settings": "Настройки загрузчика Web",
