--- a/src/lib/i18n/locales/sv-SE/translation.json
+++ b/src/lib/i18n/locales/sv-SE/translation.json
@@ -60,6 +60,7 @@
 	"available!": "tillgänglig!",
 	"Back": "Tillbaka",
 	"Bad Response": "Felaktig respons",
+	"Banners": "",
 	"before": "før",
 	"Being lazy": "Lägg till",
 	"Builder Mode": "Byggarläge",
@@ -98,6 +99,7 @@
 	"Confirm Password": "Bekräfta lösenord",
 	"Connections": "Anslutningar",
 	"Content": "Innehåll",
+	"Content of the banner": "",
 	"Context Length": "Kontextlängd",
 	"Continue Response": "Fortsätt svar",
 	"Conversation Mode": "Samtalsläge",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "Upptäck en prompt",
 	"Discover, download, and explore custom prompts": "Upptäck, ladda ner och utforska anpassade prompts",
 	"Discover, download, and explore model presets": "Upptäck, ladda ner och utforska modellförinställningar",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Visa användarnamnet istället för du i chatten",
 	"Document": "Dokument",
 	"Document Settings": "Dokumentinställningar",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "Ange ditt fullständiga namn",
 	"Enter Your Password": "Ange ditt lösenord",
 	"Enter Your Role": "Ange din roll",
+	"Error": "",
 	"Experimental": "Experimentell",
 	"Export All Chats (All Users)": "Exportera alla chattar (alla användare)",
 	"Export Chats": "Exportera chattar",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "Importera modelfiler",
 	"Import Prompts": "Importera prompts",
 	"Include `--api` flag when running stable-diffusion-webui": "Inkludera `--api`-flagga när du kör stabil-diffusion-webui",
+	"Info": "",
 	"Input commands": "Indatakommandon",
 	"Interface": "Gränssnitt",
 	"Invalid Tag": "Ogiltig tagg",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "Problem med att komma åt Ollama?",
 	"TTS Settings": "TTS-inställningar",
 	"Type Hugging Face Resolve (Download) URL": "Skriv Hugging Face Resolve (nedladdning) URL",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Oj då! Det uppstod ett problem med att ansluta till {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Okänd filtyp '{{file_type}}', men accepterar och behandlar som vanlig text",
 	"Update and Copy Link": "Uppdatera och kopiera länk",
@@ -478,6 +484,7 @@
 	"variable": "variabel",
 	"variable to have them replaced with clipboard content.": "variabel för att få dem ersatta med urklippsinnehåll.",
 	"Version": "Version",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Varning: Om du uppdaterar eller ändrar din embedding modell måste du importera alla dokument igen.",
 	"Web": "Webb",
 	"Web Loader Settings": "Web Loader-inställningar",
