--- a/src/lib/i18n/locales/bg-BG/translation.json
+++ b/src/lib/i18n/locales/bg-BG/translation.json
@@ -60,6 +60,7 @@
 	"available!": "наличен!",
 	"Back": "Назад",
 	"Bad Response": "Невалиден отговор от API",
+	"Banners": "",
 	"before": "преди",
 	"Being lazy": "Да бъдеш мързелив",
 	"Builder Mode": "Режим на Създаване",
@@ -98,6 +99,7 @@
 	"Confirm Password": "Потвърди Парола",
 	"Connections": "Връзки",
 	"Content": "Съдържание",
+	"Content of the banner": "",
 	"Context Length": "Дължина на Контекста",
 	"Continue Response": "Продължи отговора",
 	"Conversation Mode": "Режим на Чат",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "Откриване на промпт",
 	"Discover, download, and explore custom prompts": "Откриване, сваляне и преглед на персонализирани промптове",
 	"Discover, download, and explore model presets": "Откриване, сваляне и преглед на пресетове на модели",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Показване на потребителското име вместо Вие в чата",
 	"Document": "Документ",
 	"Document Settings": "Документ Настройки",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "Въведете вашето пълно име",
 	"Enter Your Password": "Въведете вашата парола",
 	"Enter Your Role": "Въведете вашата роля",
+	"Error": "",
 	"Experimental": "Експериментално",
 	"Export All Chats (All Users)": "Експортване на всички чатове (За всички потребители)",
 	"Export Chats": "Експортване на чатове",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "Импортване на модфайлове",
 	"Import Prompts": "Импортване на промптове",
 	"Include `--api` flag when running stable-diffusion-webui": "Включете флага `--api`, когато стартирате stable-diffusion-webui",
+	"Info": "",
 	"Input commands": "Въведете команди",
 	"Interface": "Интерфейс",
 	"Invalid Tag": "Невалиден тег",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "Проблеми с достъпът до Ollama?",
 	"TTS Settings": "TTS Настройки",
 	"Type Hugging Face Resolve (Download) URL": "Въведете Hugging Face Resolve (Download) URL",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "О, не! Възникна проблем при свързването с {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Непознат файлов тип '{{file_type}}', но се приема и обработва като текст",
 	"Update and Copy Link": "Обнови и копирай връзка",
@@ -478,6 +484,7 @@
 	"variable": "променлива",
 	"variable to have them replaced with clipboard content.": "променливи да се заменят съдържанието от клипборд.",
 	"Version": "Версия",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Предупреждение: Ако актуализирате или промените вашия модел за вграждане, трябва да повторите импортирането на всички документи.",
 	"Web": "Уеб",
 	"Web Loader Settings": "Настройки за зареждане на уеб",
