--- a/src/lib/i18n/locales/ca-ES/translation.json
+++ b/src/lib/i18n/locales/ca-ES/translation.json
@@ -60,6 +60,7 @@
 	"available!": "disponible!",
 	"Back": "Enrere",
 	"Bad Response": "Resposta Erroni",
+	"Banners": "",
 	"before": "abans",
 	"Being lazy": "Ser l'estupidez",
 	"Builder Mode": "Mode Constructor",
@@ -98,6 +99,7 @@
 	"Confirm Password": "Confirma la Contrasenya",
 	"Connections": "Connexions",
 	"Content": "Contingut",
+	"Content of the banner": "",
 	"Context Length": "Longitud del Context",
 	"Continue Response": "Continua la Resposta",
 	"Conversation Mode": "Mode de Conversa",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "Descobreix un prompt",
 	"Discover, download, and explore custom prompts": "Descobreix, descarrega i explora prompts personalitzats",
 	"Discover, download, and explore model presets": "Descobreix, descarrega i explora presets de models",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Mostra el nom d'usuari en lloc de 'Tu' al Xat",
 	"Document": "Document",
 	"Document Settings": "Configuració de Documents",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "Introdueix el Teu Nom Complet",
 	"Enter Your Password": "Introdueix la Teva Contrasenya",
 	"Enter Your Role": "Introdueix el Teu Ròl",
+	"Error": "",
 	"Experimental": "Experimental",
 	"Export All Chats (All Users)": "Exporta Tots els Xats (Tots els Usuaris)",
 	"Export Chats": "Exporta Xats",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "Importa Fitxers de Model",
 	"Import Prompts": "Importa Prompts",
 	"Include `--api` flag when running stable-diffusion-webui": "Inclou la bandera `--api` quan executis stable-diffusion-webui",
+	"Info": "",
 	"Input commands": "Entra ordres",
 	"Interface": "Interfície",
 	"Invalid Tag": "Etiqueta Inválida",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "Problemes accedint a Ollama?",
 	"TTS Settings": "Configuracions TTS",
 	"Type Hugging Face Resolve (Download) URL": "Escriu URL de Resolució (Descàrrega) de Hugging Face",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Uf! Hi va haver un problema connectant-se a {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Tipus d'Arxiu Desconegut '{{file_type}}', però acceptant i tractant com a text pla",
 	"Update and Copy Link": "Actualitza i Copia enllaç",
@@ -478,6 +484,7 @@
 	"variable": "variable",
 	"variable to have them replaced with clipboard content.": "variable per tenir-les reemplaçades amb el contingut del porta-retalls.",
 	"Version": "Versió",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Avís: Si actualitzeu o canvieu el model d'incrustació, haureu de tornar a importar tots els documents.",
 	"Web": "Web",
 	"Web Loader Settings": "Configuració del carregador web",
