--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -60,6 +60,7 @@
 	"available!": "disponible !",
 	"Back": "Retour",
 	"Bad Response": "Mauvaise réponse",
+	"Banners": "",
 	"before": "avant",
 	"Being lazy": "En manque de temps",
 	"Builder Mode": "Mode Constructeur",
@@ -98,6 +99,7 @@
 	"Confirm Password": "Confirmer le mot de passe",
 	"Connections": "Connexions",
 	"Content": "Contenu",
+	"Content of the banner": "",
 	"Context Length": "Longueur du contexte",
 	"Continue Response": "Continuer la réponse",
 	"Conversation Mode": "Mode de conversation",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "Découvrir un prompt",
 	"Discover, download, and explore custom prompts": "Découvrir, télécharger et explorer des prompts personnalisés",
 	"Discover, download, and explore model presets": "Découvrir, télécharger et explorer des préconfigurations de modèles",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Afficher le nom d'utilisateur au lieu de 'Vous' dans le Chat",
 	"Document": "Document",
 	"Document Settings": "Paramètres du document",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "Entrez votre nom complet",
 	"Enter Your Password": "Entrez votre mot de passe",
 	"Enter Your Role": "Entrez votre rôle",
+	"Error": "",
 	"Experimental": "Expérimental",
 	"Export All Chats (All Users)": "Exporter tous les chats (tous les utilisateurs)",
 	"Export Chats": "Exporter les chats",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "Importer les fichiers de modèle",
 	"Import Prompts": "Importer les prompts",
 	"Include `--api` flag when running stable-diffusion-webui": "Inclure le drapeau `--api` lors de l'exécution de stable-diffusion-webui",
+	"Info": "",
 	"Input commands": "Entrez les commandes d'entrée",
 	"Interface": "Interface",
 	"Invalid Tag": "Tag invalide",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "Problèmes d'accès à Ollama ?",
 	"TTS Settings": "Paramètres TTS",
 	"Type Hugging Face Resolve (Download) URL": "Entrez l'URL de résolution (téléchargement) Hugging Face",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Uh-oh ! Il y a eu un problème de connexion à {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Type de fichier inconnu '{{file_type}}', mais accepté et traité comme du texte brut",
 	"Update and Copy Link": "Mettre à jour et copier le lien",
@@ -478,6 +484,7 @@
 	"variable": "variable",
 	"variable to have them replaced with clipboard content.": "variable pour les remplacer par le contenu du presse-papiers.",
 	"Version": "Version",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Attention : Si vous mettez à jour ou changez votre modèle d'intégration, vous devrez réimporter tous les documents.",
 	"Web": "Web",
 	"Web Loader Settings": "Paramètres du chargeur Web",
