--- a/src/lib/i18n/locales/he-IL/translation.json
+++ b/src/lib/i18n/locales/he-IL/translation.json
@@ -60,6 +60,7 @@
 	"available!": "זמין!",
 	"Back": "חזור",
 	"Bad Response": "תגובה שגויה",
+	"Banners": "",
 	"before": "לפני",
 	"Being lazy": "להיות עצלן",
 	"Builder Mode": "מצב בונה",
@@ -98,6 +99,7 @@
 	"Confirm Password": "אשר סיסמה",
 	"Connections": "חיבורים",
 	"Content": "תוכן",
+	"Content of the banner": "",
 	"Context Length": "אורך הקשר",
 	"Continue Response": "המשך תגובה",
 	"Conversation Mode": "מצב שיחה",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "גלה פקודה",
 	"Discover, download, and explore custom prompts": "גלה, הורד, וחקור פקודות מותאמות אישית",
 	"Discover, download, and explore model presets": "גלה, הורד, וחקור הגדרות מודל מוגדרות מראש",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "הצג את שם המשתמש במקום 'אתה' בצ'אט",
 	"Document": "מסמך",
 	"Document Settings": "הגדרות מסמך",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "הזן את שמך המלא",
 	"Enter Your Password": "הזן את הסיסמה שלך",
 	"Enter Your Role": "הזן את התפקיד שלך",
+	"Error": "",
 	"Experimental": "ניסיוני",
 	"Export All Chats (All Users)": "ייצוא כל הצ'אטים (כל המשתמשים)",
 	"Export Chats": "ייצוא צ'אטים",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "יבוא קבצי מודלים",
 	"Import Prompts": "יבוא פקודות",
 	"Include `--api` flag when running stable-diffusion-webui": "כלול את הדגל `--api` בעת הרצת stable-diffusion-webui",
+	"Info": "",
 	"Input commands": "פקודות קלט",
 	"Interface": "ממשק",
 	"Invalid Tag": "תג לא חוקי",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "קשה לגשת לOllama?",
 	"TTS Settings": "הגדרות TTS",
 	"Type Hugging Face Resolve (Download) URL": "הקלד כתובת URL של פתרון פנים מחבק (הורד)",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "או-הו! אירעה בעיה בהתחברות ל- {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "סוג קובץ לא ידוע '{{file_type}}', אך מקבל ומתייחס אליו כטקסט רגיל",
 	"Update and Copy Link": "עדכן ושכפל קישור",
@@ -478,6 +484,7 @@
 	"variable": "משתנה",
 	"variable to have them replaced with clipboard content.": "משתנה להחליפו ב- clipboard תוכן.",
 	"Version": "גרסה",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "אזהרה: אם תעדכן או תשנה את מודל ההטבעה שלך, יהיה עליך לייבא מחדש את כל המסמכים.",
 	"Web": "רשת",
 	"Web Loader Settings": "הגדרות טעינת אתר",
