--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -60,6 +60,7 @@
 	"available!": "사용 가능!",
 	"Back": "뒤로가기",
 	"Bad Response": "응답이 좋지 않습니다.",
+	"Banners": "",
 	"before": "이전",
 	"Being lazy": "게으름 피우기",
 	"Builder Mode": "빌더 모드",
@@ -98,6 +99,7 @@
 	"Confirm Password": "비밀번호 확인",
 	"Connections": "연결",
 	"Content": "내용",
+	"Content of the banner": "",
 	"Context Length": "내용 길이",
 	"Continue Response": "대화 계속",
 	"Conversation Mode": "대화 모드",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "프롬프트 검색",
 	"Discover, download, and explore custom prompts": "사용자 정의 프롬프트 검색, 다운로드 및 탐색",
 	"Discover, download, and explore model presets": "모델 사전 설정 검색, 다운로드 및 탐색",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "채팅에서 'You' 대신 사용자 이름 표시",
 	"Document": "문서",
 	"Document Settings": "문서 설정",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "전체 이름 입력",
 	"Enter Your Password": "비밀번호 입력",
 	"Enter Your Role": "역할 입력",
+	"Error": "",
 	"Experimental": "실험적",
 	"Export All Chats (All Users)": "모든 채팅 내보내기 (모든 사용자)",
 	"Export Chats": "채팅 내보내기",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "모델파일 가져오기",
 	"Import Prompts": "프롬프트 가져오기",
 	"Include `--api` flag when running stable-diffusion-webui": "stable-diffusion-webui를 실행할 때 '--api' 플래그 포함",
+	"Info": "",
 	"Input commands": "입력 명령",
 	"Interface": "인터페이스",
 	"Invalid Tag": "잘못된 태그",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "Ollama에 접근하는 데 문제가 있나요?",
 	"TTS Settings": "TTS 설정",
 	"Type Hugging Face Resolve (Download) URL": "Hugging Face Resolve (다운로드) URL 입력",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "앗! {{provider}}에 연결하는 데 문제가 있었습니다.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "알 수 없는 파일 유형 '{{file_type}}', 하지만 일반 텍스트로 허용하고 처리합니다.",
 	"Update and Copy Link": "링크 업데이트 및 복사",
@@ -478,6 +484,7 @@
 	"variable": "변수",
 	"variable to have them replaced with clipboard content.": "변수를 사용하여 클립보드 내용으로 바꾸세요.",
 	"Version": "버전",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "웹 로더를 업데이트하거나 변경할 경우 모든 문서를 다시 가져와야 합니다.",
 	"Web": "웹",
 	"Web Loader Settings": "웹 로더 설정",
