--- a/src/lib/i18n/locales/nl-NL/translation.json
+++ b/src/lib/i18n/locales/nl-NL/translation.json
@@ -60,6 +60,7 @@
 	"available!": "beschikbaar!",
 	"Back": "Terug",
 	"Bad Response": "Ongeldig antwoord",
+	"Banners": "",
 	"before": "voor",
 	"Being lazy": "Lustig zijn",
 	"Builder Mode": "Bouwer Modus",
@@ -98,6 +99,7 @@
 	"Confirm Password": "Bevestig Wachtwoord",
 	"Connections": "Verbindingen",
 	"Content": "Inhoud",
+	"Content of the banner": "",
 	"Context Length": "Context Lengte",
 	"Continue Response": "Doorgaan met Antwoord",
 	"Conversation Mode": "Gespreksmodus",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "Ontdek een prompt",
 	"Discover, download, and explore custom prompts": "Ontdek, download en verken aangepaste prompts",
 	"Discover, download, and explore model presets": "Ontdek, download en verken model presets",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Toon de gebruikersnaam in plaats van Jij in de Chat",
 	"Document": "Document",
 	"Document Settings": "Document Instellingen",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "Voer je Volledige Naam in",
 	"Enter Your Password": "Voer je Wachtwoord in",
 	"Enter Your Role": "Voer je Rol in",
+	"Error": "",
 	"Experimental": "Experimenteel",
 	"Export All Chats (All Users)": "Exporteer Alle Chats (Alle Gebruikers)",
 	"Export Chats": "Exporteer Chats",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "Importeer Modelfiles",
 	"Import Prompts": "Importeer Prompts",
 	"Include `--api` flag when running stable-diffusion-webui": "Voeg `--api` vlag toe bij het uitvoeren van stable-diffusion-webui",
+	"Info": "",
 	"Input commands": "Voer commando's in",
 	"Interface": "Interface",
 	"Invalid Tag": "Ongeldige Tag",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "Problemen met toegang tot Ollama?",
 	"TTS Settings": "TTS instellingen",
 	"Type Hugging Face Resolve (Download) URL": "Type Hugging Face Resolve (Download) URL",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Uh-oh! Er was een probleem met verbinden met {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Onbekend Bestandstype '{{file_type}}', maar accepteren en behandelen als platte tekst",
 	"Update and Copy Link": "Update en Kopieer Link",
@@ -478,6 +484,7 @@
 	"variable": "variabele",
 	"variable to have them replaced with clipboard content.": "variabele om ze te laten vervangen door klembord inhoud.",
 	"Version": "Versie",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Warning: Als je de embedding model bijwerkt of wijzigt, moet je alle documenten opnieuw importeren.",
 	"Web": "Web",
 	"Web Loader Settings": "Web Loader instellingen",
