--- a/src/lib/i18n/locales/pt-BR/translation.json
+++ b/src/lib/i18n/locales/pt-BR/translation.json
@@ -60,6 +60,7 @@
 	"available!": "disponível!",
 	"Back": "Voltar",
 	"Bad Response": "Resposta ruim",
+	"Banners": "",
 	"before": "antes",
 	"Being lazy": "Ser preguiçoso",
 	"Builder Mode": "Modo de Construtor",
@@ -98,6 +99,7 @@
 	"Confirm Password": "Confirmar Senha",
 	"Connections": "Conexões",
 	"Content": "Conteúdo",
+	"Content of the banner": "",
 	"Context Length": "Comprimento do Contexto",
 	"Continue Response": "Continuar resposta",
 	"Conversation Mode": "Modo de Conversa",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "Descobrir um prompt",
 	"Discover, download, and explore custom prompts": "Descubra, baixe e explore prompts personalizados",
 	"Discover, download, and explore model presets": "Descubra, baixe e explore predefinições de modelo",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Exibir o nome de usuário em vez de Você no Bate-papo",
 	"Document": "Documento",
 	"Document Settings": "Configurações de Documento",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "Digite seu Nome Completo",
 	"Enter Your Password": "Digite sua Senha",
 	"Enter Your Role": "Digite sua Função",
+	"Error": "",
 	"Experimental": "Experimental",
 	"Export All Chats (All Users)": "Exportar Todos os Bate-papos (Todos os Usuários)",
 	"Export Chats": "Exportar Bate-papos",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "Importar Arquivos de Modelo",
 	"Import Prompts": "Importar Prompts",
 	"Include `--api` flag when running stable-diffusion-webui": "Inclua a flag `--api` ao executar stable-diffusion-webui",
+	"Info": "",
 	"Input commands": "Comandos de entrada",
 	"Interface": "Interface",
 	"Invalid Tag": "Etiqueta Inválida",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "Problemas para acessar o Ollama?",
 	"TTS Settings": "Configurações TTS",
 	"Type Hugging Face Resolve (Download) URL": "Digite a URL do Hugging Face Resolve (Download)",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Opa! Houve um problema ao conectar-se a {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Tipo de arquivo desconhecido '{{file_type}}', mas aceitando e tratando como texto simples",
 	"Update and Copy Link": "Atualizar e Copiar Link",
@@ -478,6 +484,7 @@
 	"variable": "variável",
 	"variable to have them replaced with clipboard content.": "variável para que sejam substituídos pelo conteúdo da área de transferência.",
 	"Version": "Versão",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Aviso: Se você atualizar ou alterar seu modelo de incorporação, você precisará reimportar todos os documentos.",
 	"Web": "Web",
 	"Web Loader Settings": "Configurações do Carregador da Web",
