--- a/src/lib/i18n/locales/sr-RS/translation.json
+++ b/src/lib/i18n/locales/sr-RS/translation.json
@@ -60,6 +60,7 @@
 	"available!": "доступно!",
 	"Back": "Назад",
 	"Bad Response": "Лош одговор",
+	"Banners": "",
 	"before": "пре",
 	"Being lazy": "Бити лењ",
 	"Builder Mode": "Режим градитеља",
@@ -98,6 +99,7 @@
 	"Confirm Password": "Потврди лозинку",
 	"Connections": "Везе",
 	"Content": "Садржај",
+	"Content of the banner": "",
 	"Context Length": "Дужина контекста",
 	"Continue Response": "Настави одговор",
 	"Conversation Mode": "Режим разговарања",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "Откриј упит",
 	"Discover, download, and explore custom prompts": "Откријте, преузмите и истражите прилагођене упите",
 	"Discover, download, and explore model presets": "Откријте, преузмите и истражите образце модела",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Прикажи корисничко име уместо Ти у чату",
 	"Document": "Документ",
 	"Document Settings": "Подешавања документа",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "Унесите ваше име и презиме",
 	"Enter Your Password": "Унесите вашу лозинку",
 	"Enter Your Role": "Унесите вашу улогу",
+	"Error": "",
 	"Experimental": "Експериментално",
 	"Export All Chats (All Users)": "Извези сва ћаскања (сви корисници)",
 	"Export Chats": "Извези ћаскања",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "Увези модел-датотеке",
 	"Import Prompts": "Увези упите",
 	"Include `--api` flag when running stable-diffusion-webui": "Укључи `--api` заставицу при покретању stable-diffusion-webui",
+	"Info": "",
 	"Input commands": "Унеси наредбе",
 	"Interface": "Изглед",
 	"Invalid Tag": "Неисправна ознака",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "Проблеми са приступом Ollama-и?",
 	"TTS Settings": "TTS подешавања",
 	"Type Hugging Face Resolve (Download) URL": "Унесите Hugging Face Resolve (Download) адресу",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Упс! Дошло је до проблема при повезивању са {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Непознат тип датотеке '{{file_type}}', али прихваћен и третиран као обичан текст",
 	"Update and Copy Link": "Ажурирај и копирај везу",
@@ -478,6 +484,7 @@
 	"variable": "променљива",
 	"variable to have them replaced with clipboard content.": "променљива за замену са садржајем оставе.",
 	"Version": "Издање",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Упозорење: ако ажурирате или промените ваш модел уградње, мораћете поново да увезете све документе.",
 	"Web": "Веб",
 	"Web Loader Settings": "Подешавања веб учитавача",
