--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -60,6 +60,7 @@
 	"available!": "mevcut!",
 	"Back": "Geri",
 	"Bad Response": "Kötü Yanıt",
+	"Banners": "",
 	"before": "önce",
 	"Being lazy": "Tembelleşiyor",
 	"Builder Mode": "Oluşturucu Modu",
@@ -98,6 +99,7 @@
 	"Confirm Password": "Parolayı Onayla",
 	"Connections": "Bağlantılar",
 	"Content": "İçerik",
+	"Content of the banner": "",
 	"Context Length": "Bağlam Uzunluğu",
 	"Continue Response": "Yanıta Devam Et",
 	"Conversation Mode": "Sohbet Modu",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "Bir prompt keşfedin",
 	"Discover, download, and explore custom prompts": "Özel promptları keşfedin, indirin ve inceleyin",
 	"Discover, download, and explore model presets": "Model ön ayarlarını keşfedin, indirin ve inceleyin",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Sohbet'te Siz yerine kullanıcı adını göster",
 	"Document": "Belge",
 	"Document Settings": "Belge Ayarları",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "Tam Adınızı Girin",
 	"Enter Your Password": "Parolanızı Girin",
 	"Enter Your Role": "Rolünüzü Girin",
+	"Error": "",
 	"Experimental": "Deneysel",
 	"Export All Chats (All Users)": "Tüm Sohbetleri Dışa Aktar (Tüm Kullanıcılar)",
 	"Export Chats": "Sohbetleri Dışa Aktar",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "Model Dosyalarını İçe Aktar",
 	"Import Prompts": "Promptları İçe Aktar",
 	"Include `--api` flag when running stable-diffusion-webui": "stable-diffusion-webui çalıştırılırken `--api` bayrağını dahil edin",
+	"Info": "",
 	"Input commands": "Giriş komutları",
 	"Interface": "Arayüz",
 	"Invalid Tag": "Geçersiz etiket",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "Ollama'ya erişmede sorun mu yaşıyorsunuz?",
 	"TTS Settings": "TTS Ayarları",
 	"Type Hugging Face Resolve (Download) URL": "Hugging Face Resolve (Download) URL'sini Yazın",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Ah! {{provider}}'a bağlanırken bir sorun oluştu.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Bilinmeyen Dosya Türü '{{file_type}}', ancak düz metin olarak kabul ediliyor ve işleniyor",
 	"Update and Copy Link": "Güncelle ve Bağlantıyı Kopyala",
@@ -478,6 +484,7 @@
 	"variable": "değişken",
 	"variable to have them replaced with clipboard content.": "panodaki içerikle değiştirilmesi için değişken.",
 	"Version": "Sürüm",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Uyarı: Gömme modelinizi günceller veya değiştirirseniz, tüm belgeleri yeniden içe aktarmanız gerekecektir.",
 	"Web": "Web",
 	"Web Loader Settings": "Web Yükleyici Ayarları",
