--- a/src/lib/i18n/locales/uk-UA/translation.json
+++ b/src/lib/i18n/locales/uk-UA/translation.json
@@ -60,6 +60,7 @@
 	"available!": "доступно!",
 	"Back": "Назад",
 	"Bad Response": "Неправильна відповідь",
+	"Banners": "",
 	"before": "до того, як",
 	"Being lazy": "Не поспішати",
 	"Builder Mode": "Режим конструктора",
@@ -98,6 +99,7 @@
 	"Confirm Password": "Підтвердіть пароль",
 	"Connections": "З'єднання",
 	"Content": "Зміст",
+	"Content of the banner": "",
 	"Context Length": "Довжина контексту",
 	"Continue Response": "Продовжити відповідь",
 	"Conversation Mode": "Режим розмови",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "Знайти промт",
 	"Discover, download, and explore custom prompts": "Знайдіть, завантажте та досліджуйте налаштовані промти",
 	"Discover, download, and explore model presets": "Знайдіть, завантажте та досліджуйте налаштовані налаштування моделі",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Показувати ім'я користувача замість 'Ви' в чаті",
 	"Document": "Документ",
 	"Document Settings": "Налаштування документа",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "Введіть ваше ім'я",
 	"Enter Your Password": "Введіть ваш пароль",
 	"Enter Your Role": "Введіть вашу роль",
+	"Error": "",
 	"Experimental": "Експериментальне",
 	"Export All Chats (All Users)": "Експортувати всі чати (всі користувачі)",
 	"Export Chats": "Експортувати чати",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "Імпортувати файл моделі",
 	"Import Prompts": "Імпортувати промти",
 	"Include `--api` flag when running stable-diffusion-webui": "Включіть прапор `--api` при запуску stable-diffusion-webui",
+	"Info": "",
 	"Input commands": "Команди вводу",
 	"Interface": "Інтерфейс",
 	"Invalid Tag": "Недійсний тег",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "Проблеми з доступом до Ollama?",
 	"TTS Settings": "Налаштування TTS",
 	"Type Hugging Face Resolve (Download) URL": "Введіть URL ресурсу Hugging Face Resolve (завантаження)",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Ой! Виникла проблема при підключенні до {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Невідомий тип файлу '{{file_type}}', але приймається та обробляється як звичайний текст",
 	"Update and Copy Link": "Оновлення та копіювання посилання",
@@ -478,6 +484,7 @@
 	"variable": "змінна",
 	"variable to have them replaced with clipboard content.": "змінна, щоб замінити їх вмістом буфера обміну.",
 	"Version": "Версія",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Попередження: Якщо ви оновлюєте або змінюєте модель вбудовування, вам потрібно буде повторно імпортувати всі документи.",
 	"Web": "Веб",
 	"Web Loader Settings": "Налаштування веб-завантажувача",
