--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -60,6 +60,7 @@
 	"available!": "có sẵn!",
 	"Back": "Quay lại",
 	"Bad Response": "Trả lời KHÔNG tốt",
+	"Banners": "",
 	"before": "trước",
 	"Being lazy": "Lười biếng",
 	"Builder Mode": "Chế độ Builder",
@@ -98,6 +99,7 @@
 	"Confirm Password": "Xác nhận Mật khẩu",
 	"Connections": "Kết nối",
 	"Content": "Nội dung",
+	"Content of the banner": "",
 	"Context Length": "Độ dài ngữ cảnh (Context Length)",
 	"Continue Response": "Tiếp tục trả lời",
 	"Conversation Mode": "Chế độ hội thoại",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "Khám phá thêm prompt mới",
 	"Discover, download, and explore custom prompts": "Tìm kiếm, tải về và khám phá thêm các prompt tùy chỉnh",
 	"Discover, download, and explore model presets": "Tìm kiếm, tải về và khám phá thêm các thiết lập mô hình sẵn",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Hiển thị tên người sử dụng thay vì 'Bạn' trong nội dung chat",
 	"Document": "Tài liệu",
 	"Document Settings": "Cấu hình kho tài liệu",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "Nhập Họ và Tên của bạn",
 	"Enter Your Password": "Nhập Mật khẩu của bạn",
 	"Enter Your Role": "Nhập vai trò của bạn",
+	"Error": "",
 	"Experimental": "Thử nghiệm",
 	"Export All Chats (All Users)": "Tải về tất cả nội dung chat (tất cả mọi người)",
 	"Export Chats": "Tải nội dung chat về máy",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "Nạp tệp mô tả",
 	"Import Prompts": "Nạp các prompt lên hệ thống",
 	"Include `--api` flag when running stable-diffusion-webui": "Bao gồm flag `--api` khi chạy stable-diffusion-webui",
+	"Info": "",
 	"Input commands": "Nhập các câu lệnh",
 	"Interface": "Giao diện",
 	"Invalid Tag": "Tag không hợp lệ",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "Gặp vấn đề khi truy cập Ollama?",
 	"TTS Settings": "Cài đặt Chuyển văn bản thành Giọng nói",
 	"Type Hugging Face Resolve (Download) URL": "Nhập URL Hugging Face Resolve (Tải xuống)",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Ồ! Đã xảy ra sự cố khi kết nối với {{provider}}.",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "Loại Tệp Không xác định '{{file_type}}', nhưng đang chấp nhận và xử lý như văn bản thô",
 	"Update and Copy Link": "Cập nhật và sao chép link",
@@ -478,6 +484,7 @@
 	"variable": "biến",
 	"variable to have them replaced with clipboard content.": "biến để có chúng được thay thế bằng nội dung clipboard.",
 	"Version": "Version",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Cảnh báo: Nếu cập nhật hoặc thay đổi embedding model, bạn sẽ cần cập nhật lại tất cả tài liệu.",
 	"Web": "Web",
 	"Web Loader Settings": "Cài đặt Web Loader",
