--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -60,6 +60,7 @@
 	"available!": "可用！",
 	"Back": "返回",
 	"Bad Response": "不良响应",
+	"Banners": "",
 	"before": "之前",
 	"Being lazy": "懒惰",
 	"Builder Mode": "构建模式",
@@ -98,6 +99,7 @@
 	"Confirm Password": "确认密码",
 	"Connections": "连接",
 	"Content": "内容",
+	"Content of the banner": "",
 	"Context Length": "上下文长度",
 	"Continue Response": "继续回复",
 	"Conversation Mode": "对话模式",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "探索提示词",
 	"Discover, download, and explore custom prompts": "发现、下载并探索自定义提示词",
 	"Discover, download, and explore model presets": "发现、下载并探索模型预设",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "在聊天中显示用户名而不是“你”",
 	"Document": "文档",
 	"Document Settings": "文档设置",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "输入您的全名",
 	"Enter Your Password": "输入您的密码",
 	"Enter Your Role": "输入您的角色",
+	"Error": "",
 	"Experimental": "实验性",
 	"Export All Chats (All Users)": "导出所有聊天（所有用户）",
 	"Export Chats": "导出聊天",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "导入模型文件",
 	"Import Prompts": "导入提示",
 	"Include `--api` flag when running stable-diffusion-webui": "运行 stable-diffusion-webui 时包含 `--api` 标志",
+	"Info": "",
 	"Input commands": "输入命令",
 	"Interface": "界面",
 	"Invalid Tag": "无效标签",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "访问 Ollama 时遇到问题？",
 	"TTS Settings": "文本转语音设置",
 	"Type Hugging Face Resolve (Download) URL": "输入 Hugging Face 解析（下载）URL",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "哎呀！连接到{{provider}}时出现问题。",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "未知文件类型'{{file_type}}'，将视为纯文本进行处理",
 	"Update and Copy Link": "更新和复制链接",
@@ -478,6 +484,7 @@
 	"variable": "变量",
 	"variable to have them replaced with clipboard content.": "变量将被剪贴板内容替换。",
 	"Version": "版本",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "警告： 如果更新或更改 embedding 模型，则需要重新导入所有文档。",
 	"Web": "网页",
 	"Web Loader Settings": "Web 加载器设置",
