--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -60,6 +60,7 @@
 	"available!": "可以使用！",
 	"Back": "返回",
 	"Bad Response": "錯誤回應",
+	"Banners": "",
 	"before": "前",
 	"Being lazy": "懶人模式",
 	"Builder Mode": "建構模式",
@@ -98,6 +99,7 @@
 	"Confirm Password": "確認密碼",
 	"Connections": "連線",
 	"Content": "內容",
+	"Content of the banner": "",
 	"Context Length": "上下文長度",
 	"Continue Response": "繼續回答",
 	"Conversation Mode": "對話模式",
@@ -146,6 +148,7 @@
 	"Discover a prompt": "發現新提示詞",
 	"Discover, download, and explore custom prompts": "發現、下載並探索他人設置的提示詞",
 	"Discover, download, and explore model presets": "發現、下載並探索他人設置的模型",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "在聊天中顯示使用者名稱而不是「你」",
 	"Document": "文件",
 	"Document Settings": "文件設定",
@@ -192,6 +195,7 @@
 	"Enter Your Full Name": "輸入你的全名",
 	"Enter Your Password": "輸入你的密碼",
 	"Enter Your Role": "輸入你的角色",
+	"Error": "",
 	"Experimental": "實驗功能",
 	"Export All Chats (All Users)": "匯出所有聊天紀錄（所有使用者）",
 	"Export Chats": "匯出聊天紀錄",
@@ -232,6 +236,7 @@
 	"Import Modelfiles": "匯入 Modelfiles",
 	"Import Prompts": "匯入提示詞",
 	"Include `--api` flag when running stable-diffusion-webui": "在運行 stable-diffusion-webui 時加上 `--api` 標誌",
+	"Info": "",
 	"Input commands": "輸入命令",
 	"Interface": "介面",
 	"Invalid Tag": "無效標籤",
@@ -459,6 +464,7 @@
 	"Trouble accessing Ollama?": "存取 Ollama 時遇到問題？",
 	"TTS Settings": "文字轉語音設定",
 	"Type Hugging Face Resolve (Download) URL": "輸入 Hugging Face 解析後的（下載）URL",
+	"Type of banner": "",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "哎呀！連線到 {{provider}} 時出現問題。",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "未知的文件類型 '{{file_type}}'，但接受並視為純文字",
 	"Update and Copy Link": "更新並複製連結",
@@ -478,6 +484,7 @@
 	"variable": "變數",
 	"variable to have them replaced with clipboard content.": "變數將替換為剪貼簿內容",
 	"Version": "版本",
+	"Warning": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "警告：如果更新或更改你的嵌入模型，則需要重新導入所有文件",
 	"Web": "網頁",
 	"Web Loader Settings": "Web 載入器設定",
